--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ body {
   }
 }
 
-.fas {
+.nav .fas {
   position: absolute;
   top: 2rem;
   right: 1.5rem;
@@ -252,7 +252,7 @@ body {
 }
 
 @media (min-width: 56.25em) {
-  .fas {
+  .nav .fas {
     display: none;
     visibility: hidden;
   }
@@ -265,10 +265,16 @@ body {
 
 .header__hero {
   height: 100vh;
-  background-image: url("../img/web-4k.jpg");
+  background-image: url("../img/hero-low.jpg");
   background-position: right;
   background-size: cover;
   background-attachment: fixed;
+}
+
+@media (min-width: 48em) {
+  .header__hero {
+    background-image: url("../img/hero-high.jpg");
+  }
 }
 
 .header__text-box {
@@ -399,6 +405,18 @@ body {
 
 .header__icon:hover {
   color: #d2a983;
+}
+
+.header__swipe-down-btn {
+  position: absolute;
+  top: 97%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 1rem;
+  color: #e2e2e2;
+  -webkit-animation: bounce 1s infinite;
+          animation: bounce 1s infinite;
 }
 
 .about-me {
@@ -1196,7 +1214,14 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 70%;
+  width: 110%;
+}
+
+@media (min-width: 40.625em) {
+  .contact__box {
+    margin-left: 3.5rem;
+    margin-right: 3.5rem;
+  }
 }
 
 .contact__form-box {
@@ -1215,7 +1240,7 @@ body {
           flex-direction: column;
   background-color: #232731;
   margin-bottom: 2rem;
-  width: 300px;
+  width: 400px;
   border: 10px solid #2a2d33;
   -webkit-box-ordinal-group: 0;
       -ms-flex-order: -1;
@@ -1237,7 +1262,7 @@ body {
 
 @media (min-width: 62.5em) {
   .contact__form-box {
-    width: 350px;
+    width: 450px;
   }
 }
 
@@ -1286,10 +1311,12 @@ body {
 }
 
 .contact__screen {
-  height: 420px;
+  position: relative;
+  height: 520px;
   width: 96%;
   border-radius: 5px;
   background-color: #eeebeb;
+  overflow: hidden;
 }
 
 .contact__title {
@@ -1331,15 +1358,6 @@ body {
           flex-direction: column;
 }
 
-.contact__label {
-  display: none;
-  -ms-flex-item-align: start;
-      align-self: flex-start;
-  margin-left: 5rem;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-}
-
 .contact__input {
   margin-bottom: 0.5rem;
 }
@@ -1350,22 +1368,26 @@ body {
   }
 }
 
-.contact__input::-webkit-input-placeholder {
+.contact__input::-webkit-input-placeholder,
+.contact textarea::-webkit-input-placeholder {
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
 }
 
-.contact__input:-ms-input-placeholder {
+.contact__input:-ms-input-placeholder,
+.contact textarea:-ms-input-placeholder {
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
 }
 
-.contact__input::-ms-input-placeholder {
+.contact__input::-ms-input-placeholder,
+.contact textarea::-ms-input-placeholder {
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
 }
 
-.contact__input::placeholder {
+.contact__input::placeholder,
+.contact textarea::placeholder {
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
 }
@@ -1374,7 +1396,7 @@ body {
 .contact textarea {
   width: 90%;
   border-radius: 5px;
-  padding: 0.5rem;
+  padding: 1.5rem;
   outline: none;
   border: none;
   -webkit-transition: -webkit-transform 0.3s;
@@ -1476,6 +1498,127 @@ body {
   font-size: 1.5rem;
 }
 
+.error {
+  position: absolute;
+  top: 9%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  width: 90%;
+  height: 80px;
+  border-radius: 20px;
+  -webkit-box-shadow: 0 0 0 100vh rgba(0, 0, 0, 0.2), 2px 4px 8px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 0 0 100vh rgba(0, 0, 0, 0.2), 2px 4px 8px rgba(0, 0, 0, 0.4);
+  background-color: #eeebebfa;
+  color: #2f3542;
+  padding: 2rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: (1fr)[2];
+      grid-template-rows: repeat(2, 1fr);
+  -ms-grid-columns: min-content min-content (1fr)[2];
+      grid-template-columns: -webkit-min-content -webkit-min-content repeat(2, 1fr);
+      grid-template-columns: min-content min-content repeat(2, 1fr);
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-gap: 0.5rem;
+  z-index: 100;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.error__title {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  font-size: 1.3rem;
+  font-weight: bold;
+  text-align: start;
+  text-transform: uppercase;
+  color: #b12222;
+}
+
+.error__description {
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 1;
+  grid-row: 2/ 3;
+  grid-column: 2/-1;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.3rem;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  margin-left: 1rem;
+}
+
+.error__time {
+  -ms-grid-column-align: end;
+      justify-self: end;
+  font-size: 1.2rem;
+}
+
+.error__app {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  width: 20px;
+  margin-left: 1rem;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.error__app-name {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  -ms-grid-column: 3;
+  -ms-grid-column-span: 1;
+  grid-column: 3/4;
+  -ms-grid-column-align: start;
+      justify-self: start;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgba(27, 27, 27, 0.534);
+  font-size: 1.3rem;
+}
+
+.error__icon {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1/2;
+  font-size: 1.5rem;
+}
+
+.error__icon-triangle {
+  font-size: 2rem;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1/2;
+  -ms-grid-column-align: center;
+      justify-self: center;
+  color: #b12222;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.error__icon-bell {
+  grid-column: -1;
+  color: #35373d;
+  margin-bottom: 0.1rem;
+}
+
 .swipe {
   -webkit-transform: translateY(0) !important;
           transform: translateY(0) !important;
@@ -1488,6 +1631,12 @@ body {
 .hide {
   display: block;
   opacity: 0;
+  visibility: hidden;
+}
+
+.notify {
+  -webkit-animation: swipeDown 1s, swipeUp 1s 2.7s forwards;
+          animation: swipeDown 1s, swipeUp 1s 2.7s forwards;
 }
 
 @-webkit-keyframes swipeRight {
@@ -1509,6 +1658,88 @@ body {
   to {
     -webkit-transform: 0 translate(-50%, -50%);
             transform: 0 translate(-50%, -50%);
+  }
+}
+
+@-webkit-keyframes swipeDown {
+  from {
+    -webkit-transform: translate(-50%, -50%) translateY(-200%);
+            transform: translate(-50%, -50%) translateY(-200%);
+  }
+  to {
+    -webkit-transform: translateY(0) translate(-50%, -50%);
+            transform: translateY(0) translate(-50%, -50%);
+  }
+}
+
+@keyframes swipeDown {
+  from {
+    -webkit-transform: translate(-50%, -50%) translateY(-200%);
+            transform: translate(-50%, -50%) translateY(-200%);
+  }
+  to {
+    -webkit-transform: translateY(0) translate(-50%, -50%);
+            transform: translateY(0) translate(-50%, -50%);
+  }
+}
+
+@-webkit-keyframes swipeUp {
+  from {
+    -webkit-transform: translate(-50%, -50%) translateY(0);
+            transform: translate(-50%, -50%) translateY(0);
+  }
+  to {
+    -webkit-transform: translateY(-200%) translate(-50%, -50%);
+            transform: translateY(-200%) translate(-50%, -50%);
+  }
+}
+
+@keyframes swipeUp {
+  from {
+    -webkit-transform: translate(-50%, -50%) translateY(0);
+            transform: translate(-50%, -50%) translateY(0);
+  }
+  to {
+    -webkit-transform: translateY(-200%) translate(-50%, -50%);
+            transform: translateY(-200%) translate(-50%, -50%);
+  }
+}
+
+@-webkit-keyframes bounce {
+  0% {
+    -webkit-transform: translate(-50%, -50%) translateY(0px);
+            transform: translate(-50%, -50%) translateY(0px);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) translateY(-7px);
+            transform: translate(-50%, -50%) translateY(-7px);
+  }
+  75% {
+    -webkit-transform: translate(-50%, -50%) translateY(-5px);
+            transform: translate(-50%, -50%) translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) translateY(0px);
+            transform: translate(-50%, -50%) translateY(0px);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    -webkit-transform: translate(-50%, -50%) translateY(0px);
+            transform: translate(-50%, -50%) translateY(0px);
+  }
+  50% {
+    -webkit-transform: translate(-50%, -50%) translateY(-7px);
+            transform: translate(-50%, -50%) translateY(-7px);
+  }
+  75% {
+    -webkit-transform: translate(-50%, -50%) translateY(-5px);
+            transform: translate(-50%, -50%) translateY(-5px);
+  }
+  100% {
+    -webkit-transform: translate(-50%, -50%) translateY(0px);
+            transform: translate(-50%, -50%) translateY(0px);
   }
 }
 /*# sourceMappingURL=style.css.map */
