--- a/scss/style.scss
+++ b/scss/style.scss
@@ -888,8 +888,14 @@ body {
 	}
 
 	&__btn-show-more {
+		display: inline-block;
 		margin-top: 1.5rem;
 		font-size: 1.2rem;
+
+		&:visited,
+		&:link {
+			text-decoration: none;
+		}
 
 		@media (min-width: 56.25em) {
 			font-size: 1.5rem;
