--- a/css/style.css
+++ b/css/style.css
@@ -1003,6 +1003,7 @@ body {
 
 .projects__img {
   width: 70%;
+  height: 30rem;
   -ms-grid-row: 1;
   -ms-grid-row-span: 2;
   grid-row: 1/3;
@@ -1015,11 +1016,14 @@ body {
   transition: transform 0.3s, -webkit-transform 0.3s;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
 }
 
 @media (min-width: 56.25em) {
   .projects__img {
     width: 60%;
+    height: 45rem;
   }
 }
 
