--- a/scss/style.scss
+++ b/scss/style.scss
@@ -813,14 +813,17 @@ body {
 
 	&__img {
 		width: 70%;
+		height: 30rem;
 		grid-row: 1/3;
 		box-shadow: 3px 5px 5px rgba(#000, 0.5);
 		border-radius: 0 10px 10px 0;
 		transition: transform 0.3s;
 		object-fit: cover;
+		object-position: center;
 
 		@media (min-width: 56.25em) {
 			width: 60%;
+			height: 45rem;
 		}
 
 		@media (min-width: 120.5em) {
